# Sales-automation-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  HANDOFF.md  Makefile  PORTFOLIO.md  PROJECT_OVERVIEW.md  README.md  claude.md  scratchpad.md
agents/: README.md  followup_agent.py  personalization_agent.py  pyproject.toml  reply_classifier.py  research_agent.py
agents/prompts/: classifier_prompts.py  followup_prompts.py  personalization_prompts.py  research_prompts.py
agents/scripts/: __init__.py  smoke.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/agents_interface/: __init__.py  classifier.py  followup.py  personalization.py  research.py
backend/alembic/: env.py
backend/alembic/versions/: 5d7306773eab_initial_schema.py
backend/api/: auth.py  campaigns.py  emails.py  internal.py  leads.py  webhooks.py
backend/core/: __init__.py  config.py  crypto.py  database.py  embeddings.py  exceptions.py  logging.py  response.py  vector_store.py
backend/models/: __init__.py  campaign.py  crm_update.py  email.py  lead.py  oauth_token.py  reply.py
backend/schemas/: campaign.py  crm_update.py  email.py  lead.py  oauth_token.py  reply.py
backend/scripts/: seed.py
backend/services/: gmail_service.py
backend/tests/: conftest.py  test_campaigns.py  test_emails.py  test_embeddings.py  test_followup_agent.py  test_gmail_service.py  test_health.py  test_internal.py  test_leads.py  test_models.py  test_personalization_agent.py  test_reply_classifier.py  test_research_agent.py  test_vector_store.py  test_webhooks.py
docs/: 00-ARCHITECTURE.md  01-PHASES.md  02-DATABASE.md  03-AGENTS.md  04-API.md  05-N8N-WORKFLOWS.md  06-FRONTEND.md  07-DEPLOYMENT.md  CLAUDE-CODE-GUIDE.md  README.md
docs/prompts/: README.md  phase-0-scaffold.md  phase-1-2-backend.md  phase-3-agents.md  phase-4-automation.md  phase-5-frontend.md  phase-6-7-testing-deploy.md
docs/superpowers/plans/: 2026-05-14-phase-0-scaffold.md  2026-05-15-phase-3a-research-agent.md  2026-05-16-dual-agent-workflow.md  2026-05-16-readme.md
docs/superpowers/specs/: 2026-05-15-phase-3a-research-agent-design.md  2026-05-16-dual-agent-workflow-design.md  2026-05-16-phase-5a-frontend-shell-design.md  2026-05-16-readme-design.md
frontend/: Dockerfile  README.original.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/campaigns/: page.tsx  (+1 more)
frontend/src/components/: EmptyState.tsx  PageHeader.tsx  StatCard.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  mock-data.ts  types.ts
infra/: README.md  docker-compose.yml
n8n-workflows/: CREDENTIALS.md  README.md  campaign_launcher.json  followup_scheduler.json  gmail_reply_monitor.json
(+26 files in other folders)
