[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-automation-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "tavily-python>=0.5",
    "beautifulsoup4>=4.12",
    "httpx",
    "tenacity>=8.0",
    "pydantic>=2.0",
]

[tool.setuptools]
# Map the importable 'agents' package to this directory (the project root).
# Editable installs create a finder that maps 'agents' -> agents/ project root,
# so `from agents.research_agent import ...` resolves correctly.
packages = ["agents", "agents.prompts", "agents.scripts"]
package-dir = {"agents" = ".", "agents.prompts" = "prompts", "agents.scripts" = "scripts"}

[tool.uv.sources]
sales-automation-agents = { path = "../agents", editable = true }
