# Uses setuptools (not hatchling) because hatchling's editable install
# cannot map an arbitrary import namespace (agents.*) to the project root
# when pyproject.toml lives inside the agents/ subdirectory.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-automation-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "tavily-python>=0.5",
    "beautifulsoup4>=4.12",
    "httpx",
    "tenacity>=8.0",
    "pydantic>=2.0",
]

[tool.setuptools]
# setuptools package-dir: maps the importable 'agents.*' namespace to this
# directory (the project root inside agents/), so `from agents.research_agent
# import ...` resolves for both editable and wheel installs.
packages = ["agents", "agents.prompts", "agents.scripts"]
package-dir = {"agents" = ".", "agents.prompts" = "prompts", "agents.scripts" = "scripts"}

