[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sales-automation-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "asyncpg",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "qdrant-client",
    "redis[asyncio]",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "python-multipart",
    "cryptography",
    "pytest",
    "pytest-asyncio",
    "respx",
    "factory-boy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["core", "models", "services"]

[tool.ruff]
line-length = 100
target-version = "py311"
